// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> should log console error when called with invalid props 1`] = `
Array [
  Array [
    "Warning: Failed prop type: The prop \`to\` is marked as required in \`Link\`, but its value is \`undefined\`.
    in Link (at Link.js:11)",
  ],
]
`;

exports[`<Link /> should log console error when called with invalid props 2`] = `
Array [
  Array [
    "Warning: Invalid route params supplied to \`Link\` component: Error generating a path for route '/blog/post/:post' with params '{}': Expected \\"post\\" to be a string",
  ],
]
`;

exports[`<Link /> should log console error when called with invalid props 3`] = `
Array [
  Array [
    "Warning: Invalid route params supplied to \`Link\` component: Error generating a path for route '/blog/post/:post' with params '{\\"invalid\\":\\"whatever\\"}': Expected \\"post\\" to be a string",
  ],
]
`;

exports[`<Link /> should render correctly 1`] = `
<a
  href="/site/"
/>
`;

exports[`<Link /> should render correctly when called with a non-existent route 1`] = `
<a
  href="/site/invalid-route"
/>
`;

exports[`<Link /> should render correctly when called with a non-existent route 2`] = `
<a
  href="/site/some/path"
/>
`;

exports[`<Link /> should render correctly with route params 1`] = `
<a
  href="/site/blog/post/hello-world"
/>
`;

exports[`<Link /> should render correctly with route params and scope 1`] = `
<a
  href="/site/blog/tag/news/page/5"
/>
`;
